# app/api/v1/services/survey/route.js
@@ -1,0 +1,9 @@
+const { Router } = require('express');
+const controller = require('./controller');
+
+const router = new Router();
+
+router.route('/random')
+  .get((req, res) => controller.randomSamples(req, res));
+
+module.exports = router;
